[gd_scene load_steps=13 format=3 uid="uid://5x6fjaay1blo"]

[ext_resource type="Script" uid="uid://bkm58ywaeb6r" path="res://point_n_click/dialogue_balloon.gd" id="1_x7axm"]
[ext_resource type="Script" uid="uid://g32um0mltv5d" path="res://addons/dialogue_manager/dialogue_label.gd" id="2_1w8xu"]
[ext_resource type="Shader" uid="uid://c0ffpah7non42" path="res://assets/shaders/darken_blur.gdshader" id="2_byv7a"]
[ext_resource type="Script" uid="uid://bb52rsfwhkxbn" path="res://addons/dialogue_manager/dialogue_responses_menu.gd" id="3_3g0ll"]
[ext_resource type="AudioStream" uid="uid://c8ugmecfr4cxs" path="res://assets/audio/sound_effects/talk_sound_2.wav" id="5_kf3s5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kf3s5"]
shader = ExtResource("2_byv7a")
shader_parameter/lod = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7k5yp"]
bg_color = Color(0, 0, 0, 0.501961)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 0.5)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x7axm"]
content_margin_left = 70.0
content_margin_top = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3g0ll"]
bg_color = Color(1, 1, 1, 0.5)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1w8xu"]
content_margin_left = 100.0
content_margin_top = 15.0
content_margin_right = 100.0
content_margin_bottom = 15.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6vs3f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_byv7a"]
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.07, 0.07, 0.07, 0)
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="DialogueBalloon" type="CanvasLayer"]
script = ExtResource("1_x7axm")

[node name="Balloon" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Balloon"]
material = SubResource("ShaderMaterial_kf3s5")
custom_minimum_size = Vector2(1000, 230)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -504.0
offset_top = -232.0
offset_right = 496.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_7k5yp")

[node name="VBoxContainer" type="VBoxContainer" parent="Balloon/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CharacterLabel" type="Label" parent="Balloon/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxEmpty_x7axm")
text = "CharacterName"

[node name="MarginContainer" type="MarginContainer" parent="Balloon/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15

[node name="Panel" type="Panel" parent="Balloon/PanelContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_3g0ll")

[node name="DialogueLabel" type="RichTextLabel" parent="Balloon/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme_override_font_sizes/bold_italics_font_size = 20
theme_override_font_sizes/italics_font_size = 20
theme_override_font_sizes/mono_font_size = 20
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_1w8xu")
bbcode_enabled = true
text = "Ceci est un exemple de dialogue"
fit_content = true
script = ExtResource("2_1w8xu")
seconds_per_step = 0.04
skip_pause_at_abbreviations = PackedStringArray("Mr", "Mrs", "Ms", "Dr", "etc", "eg", "ex")
metadata/_custom_type_script = "uid://g32um0mltv5d"

[node name="MarginContainer2" type="MarginContainer" parent="Balloon/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="DialogueResponsesMenu" type="HFlowContainer" parent="Balloon/PanelContainer/VBoxContainer/MarginContainer2" node_paths=PackedStringArray("response_template")]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
script = ExtResource("3_3g0ll")
response_template = NodePath("ResponseButton")

[node name="ResponseButton" type="Button" parent="Balloon/PanelContainer/VBoxContainer/MarginContainer2/DialogueResponsesMenu"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/focus = SubResource("StyleBoxEmpty_6vs3f")
theme_override_styles/normal = SubResource("StyleBoxFlat_byv7a")
text = "Ceci est un exemple"

[node name="TalkSoundEffect" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_kf3s5")
volume_db = -14.075

[connection signal="spoke" from="Balloon/PanelContainer/VBoxContainer/DialogueLabel" to="." method="_on_dialogue_label_spoke"]
